feat: add room management functionality